# inipath

./: LICENSE  Makefile  README.md  pyproject.toml
scripts/: help.py
src/inipath/: cli.py  commands.py  kvstore.py  pathstore.py
